Creacion de formularios

--- a/control_estudios/templates/control_estudios/listar_cursos.html
+++ b/control_estudios/templates/control_estudios/listar_cursos.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block titulo %}
 Lista de cursos
 {% endblock titulo%}
@@ -14,4 +16,5 @@ Lista de cursos
         </li>
         {% endfor %}
     </ul>
+
 {% endblock contenido %}
