--- a/control_estudios/templates/control_estudios/curso_formulario.html
+++ b/control_estudios/templates/control_estudios/curso_formulario.html
@@ -1,9 +1,12 @@
 {%  extends 'base.html' %}
 
+{% block titulo %}
+Formulario Cursos
+{% endblock titulo %}
 {% load static %}
 
 {% block contenido %}
-
+    <h1>Formulario - Curso</h1>
     {% if miFormulario.errors %}
     <p>Datos incorrectos</p>
     {% endif %}
