--- a/control_estudios/templates/control_estudios/estudiante_formulario.html
+++ b/control_estudios/templates/control_estudios/estudiante_formulario.html
@@ -1,9 +1,13 @@
 {%  extends 'base.html' %}
 
+{% block titulo %}
+Formulario estudiante
+{% endblock titulo %}
+
 {% load static %}
 
 {% block contenido %}
-
+    <h1>Formulario - Estudiante</h1>
     {% if miFormulario.errors %}
     <p>Datos incorrectos</p>
     {% endif %}
