Agregado listar cursos como ejemplo de CRUD

--- a/control_estudios/templates/control_estudios/busqueda_comision.html
+++ b/control_estudios/templates/control_estudios/busqueda_comision.html
@@ -1,10 +1,7 @@
-
-
-
 {%  extends 'base.html' %}
 
 {% block titulo %}
-Formulario entregable
+Busqueda comision
 {% endblock titulo %}
 
 {% load static %}
