--- a/control_estudios/templates/control_estudios/curso_formulario.html
+++ b/control_estudios/templates/control_estudios/curso_formulario.html
@@ -1,28 +1,21 @@
-{%  extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block titulo %}
-Formulario Cursos
+ Crear curso
 {% endblock titulo %}
 
-{% load static %}
-
 {% block contenido %}
-    <h1>Formulario - Curso</h1>
-    {% if miFormulario.errors %}
-    <p>Datos incorrectos</p>
-    {% endif %}
-
-        <form action="" method="POST"> {% csrf_token %} <!--Token de seguridad-->
-
-            <table>
-
-                {{miFormulario.as_table}}
-
-            </table>
-
-
-            <input type = "submit" value="Enviar">
-            
-        </form>  
+<h1>Formulario - Curso</h1>
+    <form method="post"> {% csrf_token %}
+    <table>
+        {{ formulario.as_table }}
+    </table>
     
+
+    <input type="submit" value="Guardar" />
+    </form>
+
+    <br>
+
+    <a href="{% url 'listar_cursos' %}">Volver a la lista</a>
 {% endblock contenido %}
