--- a/control_estudios/templates/control_estudios/listar_cursos.html
+++ b/control_estudios/templates/control_estudios/listar_cursos.html
@@ -1,4 +1,4 @@
-<!--EJEMPLO CRUD READ-->
+<!--EJEMPLO CRUD READ y DELETE-->
 
 {% extends "base.html" %}
 
@@ -21,12 +21,23 @@
          <th>ID</th>
          <th>Nombre</th>
          <th>Comision</th>
+         <th>Editar</th>
+         <th>Eliminar</th>
        </tr>
        {% for curso in cursos %} 
        <tr>
          <td>{{ curso.id }}</td>
          <td>{{ curso.nombre }}</td>
          <td>{{ curso.comision }}</td>
+         <td>
+            <a href="{% url 'editar_curso' curso.id %}">Editar</a>
+          </td>     
+         <td>
+            <form action="{% url 'eliminar_curso' curso.id %}" method="post">
+                {% csrf_token %}
+                <input type="submit" value="Eliminar"/>
+              </form>
+         </td>
        </tr>
        {% endfor %}
      </tbody>
