Agregado vistas basadas en clase de Estudiantes

--- a/control_estudios/templates/control_estudios/curso_formulario.html
+++ b/control_estudios/templates/control_estudios/curso_formulario.html
@@ -17,5 +17,5 @@
 
     <br>
 
-    <a href="{% url 'listar_cursos' %}">Volver a la lista</a>
+    <a href="{% url 'listar_cursos' %}">Lista cursos</a>
 {% endblock contenido %}
