--- a/control_estudios/templates/control_estudios/estudiante_formulario.html
+++ b/control_estudios/templates/control_estudios/estudiante_formulario.html
@@ -24,4 +24,5 @@ Formulario estudiante
             <input type = "submit" value="Enviar">
             
         </form>  
+        <a href="{% url 'lista_estudiantes' %}">Lista estudiantes</a>
 {% endblock contenido %}
