--- a/perfiles/templates/perfiles/cambiar_contrasena.html
+++ b/perfiles/templates/perfiles/cambiar_contrasena.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
 
 {% block titulo %}
-Registro
+Cambiar Contraseña
 {% endblock titulo %}
 
 {% block contenido %}
 <div class="container">
     <div class="row">
         <div class="col-md-8 col-lg-6 mx-auto">
-            <h1 class="text-center mb-4">Registro</h1>
+            <h1 class="text-center mb-4">Cambiar Contraseña</h1>
             <form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <div class="text-center">
-                    <button type="submit" class="btn btn-primary mt-3">Registrarse</button>
+                    <button type="submit" class="btn btn-primary mt-3">Cambiar Contraseña</button>
                 </div>
             </form>
         </div>
