--- a/perfiles/templates/perfiles/formulario_perfiles.html
+++ b/perfiles/templates/perfiles/formulario_perfiles.html
@@ -1,15 +1,23 @@
 {% extends "base.html" %}
 
 {% block titulo %}
-Modificación de datos
+Modificación de Datos
 {% endblock titulo %}
 
 {% block contenido %}
-<p>Tu username es <b>{{ object.username }}</b></p>
-
-<h3>Editar datos:</h3>
-<form method="post"> {% csrf_token %}
- {{ form.as_p }}
- <input type="submit" value="Salvar"/>
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 col-lg-6 mx-auto">
+            <p>Tu nombre de usuario es <b>{{ object.username }}</b></p>
+            <h3>Editar Datos:</h3>
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary mt-3">Guardar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock contenido %}
