--- a/perfiles/templates/perfiles/login.html
+++ b/perfiles/templates/perfiles/login.html
@@ -1,17 +1,22 @@
 {% extends "base.html" %}
 
 {% block titulo %}
-Login
+Inicio de Sesión
 {% endblock titulo %}
 
 {% block contenido %}
-<h1>Login</h1>
-
-<form method="post"> {% csrf_token %}
-
- {{ form.as_p }}
-
- <input type="submit" value="Iniciar Sesión" />
-
-</form>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-8 col-lg-6">
+            <h1 class="text-center mb-4">Inicio de Sesión</h1>
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary mt-3">Iniciar Sesión</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock contenido %}
