--- a/blog_mascotas/templates/control_estudios/editar_articulo.html
+++ b/blog_mascotas/templates/control_estudios/editar_articulo.html
@@ -14,7 +14,7 @@
                     {{ form.as_p }}
                     <div class="d-flex justify-content-between mt-4">
                         <button type="submit" class="btn btn-primary">Guardar Cambios</button>
-                        <a href="{% url 'pages' %}" class="btn btn-secondary">Cancelar</a>
+                        <a href="{% url 'post_propios' %}" class="btn btn-secondary">Cancelar</a>
                     </div>
                 </form>
             </div>
